k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hossouko-api
  namespace: hossouko
spec:
  selector:
    app: hossouko-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
